# dynamic-preauth

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  Procfile.dev  README.md  bacon.toml
.github/: renovate.json
.github/workflows/: quality.yaml
backend/: Cargo.toml
backend/src/: errors.rs  lib.rs  main.rs  models.rs  state.rs  utility.rs
backend/src/handlers/: build_logs.rs  downloads.rs  mod.rs  notifications.rs  session.rs  websocket.rs
backend/src/models/: build_logs.rs  executable.rs  messages.rs  mod.rs  session.rs
demo/: Cargo.toml  build.rs
demo/src/: main.rs
frontend/: astro.config.mjs  compress.sh  package.json  pnpm-lock.yaml  tailwind.config.mjs
frontend/src/: globals.scss  util.ts
frontend/src/components/: Badge.tsx  Demo.tsx  DownloadButton.tsx  Emboldened.tsx  Executable.tsx  MobileWarningModal.tsx  StatefulDemo.tsx  Token.tsx  useSocket.ts  useTabCoordination.ts
frontend/src/layouts/: Base.astro
frontend/src/pages/: index.astro  robots.txt.ts
src/: config.rs  main.rs  models.rs  railway.rs  utility.rs
templates/: index.html
