[package]
name = "demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"

[build-dependencies]
chrono = "0.4.39"
hex = "0.4.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
