[package]
name = "demo"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
hex.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[build-dependencies]
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
